GNOME Bugzilla – Bug 688877
"Move to..." menu item doesn't handle remote destinations
Last modified: 2016-04-14 15:54:09 UTC
nautilus-3.6.3-1.fc18.x86_64 1. Open a local folder in a window 2. Open a remote folder in a window 3. Select a local file and choose "Move to" 4. Select the remote location in the bookmarks to the left of the file chooser 5. Get told: " The folder contents could not be displayed Cannot change to folder because it is not local "
This is worse now in 3.20, as the file chooser doesn't allow choosing remote folders.
The file chooser should allow remote folders :/ Probably we are missing some flag.
Created attachment 326026 [details] [review] files-view: allow "move to" action to non-local locations We were missing a flag.
Attachment 326026 [details] pushed as d251a03 - files-view: allow "move to" action to non-local locations