files-view: allow "move to" action to non-local locations

We were missing a flag.

https://bugzilla.gnome.org/show_bug.cgi?id=688877